Renamed "paginator" div to "paging_div" to fix paging controls
layouts/explorer view was deleted in commit: 5762898d50f4626e3a5739612d1df70dcfefea20 that used to wrap paging controls in paging_div. When paging buttons are pressed in all explorers replace_right_cell and other methods update partial and reference paging_div which does not exist in the DOM as a result of that all the paging controls are broken in explorers. Renamed "paginator" to "paging_div" to fix all existing update_partial calls, also updated set_visible_elements calls to match the updated div id.

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -10,7 +10,7 @@ body, html {
   background-image: linear-gradient(to bottom, #FAFAFA 0%, #EDEDED 100%);
 }
 
-#paginator {
+#paging_div {
   width: 100%;
   height: 34px;
   padding-top: 2px;
@@ -54,7 +54,7 @@ body, html {
     height: 100%;
     overflow: auto;
   }
-  #paginator {
+  #paging_div {
     position: absolute;
     bottom: 0;
   }
